[package]
name = "PhotoCataloger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.5.0"
rusqlite = "0.35.0"
image = "0.25.6"
kamadak-exif = "0.6.1"
anyhow = "1.0.98"

[dev-dependencies]
tempfile = "3.10.0"
