[package]
name = "PhotoCataloger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.5.0"
rusqlite = { version = "0.29", features = ["bundled"] }
kamadak-exif = "0.6.1"
anyhow = "1.0.98"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1.0"
base64 = "0.22.1"
tokio = { version = "1.0", features = ["full"] }


[dev-dependencies]
tempfile = "3.10.0"
mockito = "1.0"
tokio = { version = "1.0", features = ["full", "test-util"] }
